--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   collection: ^1.18.0
   intl: ^0.20.1
+  firebase_core: ^3.8.0
+  cloud_firestore: ^5.5.0
   #flutter_native_splash: ^2.4.3
 
 
