--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   intl: ^0.20.1
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
-  #flutter_native_splash: ^2.4.3
+  flutter_native_splash: ^2.4.3
+  firebase_auth: ^5.3.3
 
 
 dev_dependencies:
@@ -51,9 +52,11 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
 
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: "AppIcon"
   image_path: "assets/logos/seafoodbariconlogo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/logos/seafoodbariconlogo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
